--- a/src/ItraMessenger/ItraMessenger.WEB/appsettings.json
+++ b/src/ItraMessenger/ItraMessenger.WEB/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=32768;Database=ItraMessengerDb;Username=postgres;Password=postgrespw;"
+  },
   "AllowedHosts": "*"
 }
